created basic view with page layout

--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -13,10 +13,10 @@ $font-size-base:         1rem;
 // Colors
 $body-color: $gray;
 $primary:    $blue;
-$success:    $green;
-$info:       $yellow;
-$danger:     $red;
-$warning:    $orange;
+$success:    $dark-yellow;
+$info:       $dark-yellow;
+$danger:     $dark-pink;
+$warning:    $dark-pink;
 
 // Buttons & inputs' radius
 $border-radius:    2px;
