--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,30 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="block-color mb-5"></div>
+<div class="container d-flex">
+      <div class="hp-bar ms-3" style="flex-grow: 7"></div>
+      <span style="flex-grow: 1"></span>
+      <div class="point-bar me-3" style="flex-grow: 3"></div>
+</div>
+  <div class="container d-flex justify-content-center mt-5">
+    <div class="avatar-card"></div>
+  </div>
+  <div class="routine-icons container mt-4">
+    <div class="food-icon"></div>
+    <div class="sleep-icon"></div>
+    <div class="exercise-icon"></div>
+  </div>
+
+
+<div class="navbar d-flex container">
+  <span style="font-size: 2em; color: white;">
+    <i class="fa-solid fa-clock-rotate-left"></i>
+  </span>
+  <span style="font-size: 2em; color: white;">
+    <i class="fa-solid fa-user"></i>
+  </span>
+  <span style="font-size: 2em; color: white;">
+    <i class="fa-solid fa-chart-simple"></i>
+  </span>
+  <span style="font-size: 2em; color: white;">
+   <i class="fa-solid fa-gear"></i>
+  </span>
+</div>
