--- a/app/assets/stylesheets/components/_block.scss
+++ b/app/assets/stylesheets/components/_block.scss
@@ -1,4 +1,8 @@
 .block-color {
   background-color: #38C6C2;
   height: 70px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
 }
