--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,6 @@
-<div class="block-color mb-5"></div>
+<div class="block-color d-flex mb-5">
+  <h3>Hi, name!</h3>
+</div>
 <div class="container d-flex">
       <div class="hp-bar ms-3" style="flex-grow: 7"></div>
       <span style="flex-grow: 1"></span>
