--- a/app/assets/stylesheets/components/_icon.scss
+++ b/app/assets/stylesheets/components/_icon.scss
@@ -23,3 +23,10 @@
   display: flex;
   justify-content: space-evenly;
 }
+
+.coin-icon {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  left: 10px;
+}
