--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -20,7 +20,9 @@
 }
 
 .avatar-card {
-  height: 530px;
+  height: 450px;
   width: 300px;
   background-color: gray;
+  position: relative;
+  z-index: 1;
 }
