--- a/app/assets/stylesheets/components/_icon.scss
+++ b/app/assets/stylesheets/components/_icon.scss
@@ -1,19 +1,19 @@
 .food-icon {
-  background-color: gray;
+  background-color: #A6E1DA;
   height: 60px;
   width: 60px;
   border-radius: 50%;
 }
 
 .sleep-icon {
-  background-color: gray;
+  background-color: #A6E1DA;
   height: 60px;
   width: 60px;
   border-radius: 50%;
 }
 
 .exercise-icon {
-  background-color: gray;
+  background-color: #A6E1DA;
   height: 60px;
   width: 60px;
   border-radius: 50%;
