updated the health bar

--- a/app/assets/stylesheets/components/_bar.scss
+++ b/app/assets/stylesheets/components/_bar.scss
@@ -1,6 +1,10 @@
-.hp-bar {
-  height: 30px;
-  background-color: gray;
+// .hp-bar {
+//   height: 30px;
+//   background-color: gray;
+// }
+
+.health-bar {
+  width: 90%;
 }
 
 .point-bar {
