--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,9 @@
   <h3>Hi, name!</h3>
 </div>
 <div class="container d-flex">
-      <div class="hp-bar ms-3" style="flex-grow: 7"></div>
+      <div class="hp-bar ms-3" style="flex-grow: 7">
+        <%= image_tag 'health_bar/warning_hp.png', class: "health-bar"%>
+      </div>
       <span style="flex-grow: 1"></span>
       <div class="point-bar me-3">
         <%= image_tag 'coins/coin.png', class: "coin-icon"%>
