created submission form, and made sure it displays properly depending on the condition. Edited submisssion index.html.erb, pages controller, submissions controller, user model

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,12 @@
 <div class="block-color d-flex mb-4">
   <h3>Hi, name!</h3>
+
+  <%# @submission_sleep
+  @submission_exercise
+  @submission_eating %>
+
+  <%= render "submissions/questions" %>
+
 </div>
 <div class="container d-flex">
       <div class="hp-bar ms-3" style="flex-grow: 7">
