--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -1,28 +1,33 @@
-.avatar {
-  width: 40px;
-  border-radius: 50%;
-}
-.avatar-large {
-  width: 56px;
-  border-radius: 50%;
-}
-.avatar-bordered {
-  width: 40px;
-  border-radius: 50%;
-  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
-  border: white 1px solid;
-}
-.avatar-square {
-  width: 40px;
-  border-radius: 0px;
-  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
-  border: white 1px solid;
-}
 
 .avatar-card {
-  height: 500px;
+  height: 480px;
   width: 300px;
-  background-color: gray;
+  display: flex;
+  justify-content: center;
   position: relative;
-  z-index: 1;
+}
+
+.avatar-hair {
+  width: 100%;
+  position: absolute;
+}
+
+.avatar-shoes {
+  width: 100%;
+  position: absolute;
+}
+
+.avatar-skin-color {
+  width: 100%;
+  position: absolute;
+}
+
+.avatar-pants {
+  width: 100%;
+  position: absolute;
+}
+
+.avatar-shirt {
+  width: 100%;
+  position: absolute;
 }
