--- a/app/assets/stylesheets/components/_icon.scss
+++ b/app/assets/stylesheets/components/_icon.scss
@@ -3,6 +3,7 @@
   height: 60px;
   width: 60px;
   border-radius: 50%;
+  border: 5px solid #008C9B;
 }
 
 .sleep-icon {
@@ -10,6 +11,7 @@
   height: 60px;
   width: 60px;
   border-radius: 50%;
+  border: 5px solid #008C9B;
 }
 
 .exercise-icon {
@@ -17,6 +19,7 @@
   height: 60px;
   width: 60px;
   border-radius: 50%;
+  border: 5px solid #008C9B;
 }
 
 .routine-icons {
