--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -20,6 +20,7 @@
   bottom: 0;
   width: 100%;
   padding-bottom: 25px;
+  border-top: 6px solid #008C9B;
 }
 
 /* Style the links inside the navigation bar */
