--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,7 +13,13 @@
       </div>
 </div>
   <div class="container d-flex justify-content-center mt-5">
-    <div class="avatar-card"></div>
+    <div class="avatar-card">
+      <%= cl_image_tag @user.avatar.skin_color.photo.key, :class => 'avatar-skin-color'%>
+      <%= cl_image_tag @user.avatar.hair.photo.key , :class => 'avatar-hair'%>
+      <%= cl_image_tag @user.avatar.pants.photo.key, :class => 'avatar-pants'%>
+      <%= cl_image_tag @user.avatar.shirt.photo.key, :class => 'avatar-shirt' %>
+      <%= cl_image_tag @user.avatar.shoes.photo.key, :class => 'avatar-shoes'%>
+    </div>
     <div class="speech-bubble">
     </div>
   </div>
@@ -37,7 +43,7 @@
 
 
 <%# <% if user_signed_in? %>
-    <div class="navbar d-flex container">
+    <div class="navbar d-flex container mt-2">
       <%# will link to goals index %>
       <%= link_to new_user_session_path do %>
       <span style="font-size: 2em; color: white;">
