--- a/app/assets/stylesheets/components/_font.scss
+++ b/app/assets/stylesheets/components/_font.scss
@@ -5,6 +5,11 @@ h1 {
   font-size: 50px;
 }
 
+#header {
+  position: absolute;
+  left: 30%;
+}
+
 h2 {
   font-family: "Poppins", sans-serif;
   font-weight: 600;
@@ -31,4 +36,5 @@ p {
   font-weight: 200;
   font-style: normal;
   font-size: 16px;
+  text-align: center;
 }
