--- a/app/views/avatars/edit.html.erb
+++ b/app/views/avatars/edit.html.erb
@@ -17,11 +17,16 @@
   </div>
 <div data-controller="avatar-options"  data-avatar-options-avatar-value="<%= @user.avatar.id %>">
   <div class="avatar-grid">
-  <div data-avatar-options-target="form"></div>
     <% @categories.each do |category| %>
-      <div data-action="click->avatar-options#select" value="<%= category %>"><%= cl_image_tag @parts.where(category: category).first.photo.key, class: 'avatar-option-card' %></div>
+      <div data-action="click->avatar-options#select" value="<%= category %>">
+      <button data-bs-toggle="modal" data-bs-target="#category-option-<%= category%>">
+      <%= cl_image_tag @parts.where(category: category).first.photo.key, class: 'avatar-option-card' %></button>
+      <%= render "avatars/modal", category: category %>
+      </div>
     <% end %>
   </div>
+
+
 
  <div class="navbar d-flex container mt-2">
       <%# will link to goals index %>
