--- a/app/assets/stylesheets/components/_icon.scss
+++ b/app/assets/stylesheets/components/_icon.scss
@@ -33,3 +33,10 @@
   height: 20px;
   left: 10px;
 }
+
+.setting-icon {
+  position: absolute;
+  left: 80%;
+  transform: translateX(100%);
+  bottom: 15%;
+}
