--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,6 @@
   <body>
     <%= render "shared/flashes" %>
     <%= yield %>
-    <%# <%= render "shared/navbar" %>
+    <%= render "shared/navbar" %>
   </body>
 </html>
