--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,10 @@
 <div class="block-color d-flex mb-4">
-  <h3>Hi, name!</h3>
+<%= link_to destroy_user_session_path, data: {turbo_method: :delete} do %>
+      <div class="setting-icon" style="font-size: 2em; color: white;">
+        <i class="fa-solid fa-gear"></i>
+      </div>
+      <%end%>
+  <h3>Hi, <%= current_user.avatar.name %>!</h3>
 </div>
 <div class="container d-flex">
       <div class="hp-bar ms-3" style="flex-grow: 7">
@@ -40,35 +45,3 @@
       </div>
     </div>
   </div>
-
-
-<%# <% if user_signed_in? %>
-    <div class="navbar d-flex container mt-2">
-      <%# will link to goals index %>
-      <%= link_to new_user_session_path do %>
-      <span style="font-size: 2em; color: white;">
-        <i class="fa-solid fa-clock-rotate-left"></i>
-      </span>
-      <%end%>
-      <%# will link to avatar edit %>
-      <%= link_to new_user_session_path do %>
-      <span style="font-size: 2em; color: white;">
-        <i class="fa-solid fa-user"></i>
-      </span>
-      <%end%>
-      <%# will link to submission index %>
-       <%= link_to new_user_session_path do %>
-      <span style="font-size: 2em; color: white;">
-        <i class="fa-solid fa-chart-simple"></i>
-      </span>
-      <%end%>
-      <%# will link to settings (log-out) %>
-       <%= link_to new_user_session_path do %>
-      <span style="font-size: 2em; color: white;">
-      <i class="fa-solid fa-gear"></i>
-      </span>
-      <%end%>
-    </div>
-<%# <% else %>
-     <%# <%= link_to "Login", new_user_session_path, class: "nav-link" %>
-<%# <% end %>
