updated navbar links to dashboard

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,8 +10,7 @@
         <i class="fa-solid fa-user"></i>
       </span>
       <%end%>
-      <%# will link to submission index %>
-       <%= link_to '#' do %>
+       <%= link_to dashboard_path do %>
       <span style="font-size: 2em; color: white;">
         <i class="fa-solid fa-chart-simple"></i>
       </span>
