adding highlights the option selected on the avatar form

--- a/app/views/avatars/_form.html.erb
+++ b/app/views/avatars/_form.html.erb
@@ -1,9 +1,9 @@
 <%= simple_form_for @avatar do |f| %>
   <fieldset>
     <div class="radio">
-      <%= f.input "#{category}_id", as: :radio_buttons, collection: Part.where(category: category) %>
       <% Part.where(category: category).each do |part| %>
         <%= f.label "#{category}_id_#{part.id}" do %>
+          <%= f.radio_button "#{category}_id", part.id, class: "image-radio" %>
           <%= cl_image_tag part.photo.key, height: 200 %>
         <% end %>
       <% end %>
