redirecting to homepage updated

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,56 +1,5 @@
-<div class="block-color d-flex mb-4">
-  <%= link_to destroy_user_session_path, data: {turbo_method: :delete} do %>
-    <div class="setting-icon" style="font-size: 2em; color: white;">
-      <i class="fa-solid fa-gear"></i>
-    </div>
-  <%end%>
-  <h3>Hi, <%= current_user.avatar.name %>!</h3>
-</div>
-<div class="container d-flex">
-  <div class="hp-bar ms-3" style="flex-grow: 7">
-    <% if @hp_bar_level < 40 %>
-      <%= image_tag 'health_bar/danger_hp.png', class: "health-bar" %>
-    <% elsif @hp_bar_level < 100 %>
-      <%= image_tag 'health_bar/warning_hp.png', class: "health-bar"%>
-    <% else %>
-      <%= image_tag 'health_bar/healthy_hp.png', class: "health-bar"%>
-    <% end %>
-  </div>
-  <span style="flex-grow: 1"></span>
-  <div class="point-bar me-3">
-    <%= image_tag 'coins/coin.png', class: "coin-icon"%>
-    <%# placeholder text below, can interpolate %>
-    <p>1000</p>
-  </div>
-</div>
-<div class="container d-flex justify-content-center mt-5">
-  <div class="avatar-card">
-    <%= cl_image_tag @user.avatar.skin_color.photo.key, :class => 'avatar-skin-color'%>
-    <%= cl_image_tag @user.avatar.hair.photo.key , :class => 'avatar-hair'%>
-    <%= cl_image_tag @user.avatar.pants.photo.key, :class => 'avatar-pants'%>
-    <%= cl_image_tag @user.avatar.shirt.photo.key, :class => 'avatar-shirt' %>
-    <%= cl_image_tag @user.avatar.shoes.photo.key, :class => 'avatar-shoes'%>
-  </div>
-  <div class="speech-bubble">
-  </div>
-</div>
-<div class="routine-icons container mt-4">
-  <div class="progress-circle-food" style="background:
-    radial-gradient(closest-side, white 79%, transparent 80% 100%),conic-gradient(<% if @food_percentage < 40 %><%= '#FF6073'%><% elsif @food_percentage < 80 %><%= '#F6DE68' %><% else %><%= '#38C6C2'%><% end %> <%= @food_percentage%>%, <% if @food_percentage < 40 %><%= '#FFB5BE'%><% elsif @food_percentage < 80 %><%= '#FDF5D0' %><% else %><%= '#A6E1DA'%><% end %> 0);">
-    <div class="food-icon d-flex justify-content-center align-items-center">
-      <i class="fa-solid fa-burger" style="font-size: 2em; color: white;"></i>
-    </div>
-  </div>
-  <div class="progress-circle-sleep" style="background:
-    radial-gradient(closest-side, white 79%, transparent 80% 100%),conic-gradient(<% if @sleep_percentage < 40 %><%= '#FF6073'%><% elsif @sleep_percentage < 80 %><%= '#F6DE68' %><% else %><%= '#38C6C2'%><% end %> <%= @sleep_percentage%>%, <% if @sleep_percentage < 40 %><%= '#FFB5BE'%><% elsif @sleep_percentage < 80 %><%= '#FDF5D0' %><% else %><%= '#A6E1DA'%><% end %> 0);">
-    <div class="sleep-icon d-flex justify-content-center align-items-center">
-      <i class="fa-solid fa-moon" style="font-size: 2em; color: white;"></i>
-    </div>
-  </div>
-  <div class="progress-circle-exercise" style="background:
-    radial-gradient(closest-side, white 79%, transparent 80% 100%),conic-gradient(<% if @exercise_percentage < 40 %><%= '#FF6073'%><% elsif @exercise_percentage < 80 %><%= '#F6DE68' %><% else %><%= '#38C6C2'%><% end %> <%= @exercise_percentage%>%, <% if @exercise_percentage < 40 %><%= '#FFB5BE'%><% elsif @exercise_percentage < 80 %><%= '#FDF5D0' %><% else %><%= '#A6E1DA'%><% end %> 0);">
-    <div class="exercise-icon d-flex justify-content-center align-items-center">
-      <i class="fa-solid fa-dumbbell" style="font-size: 2em; color: white;"></i>
-    </div>
-  </div>
-</div>
+<% if user_signed_in? %>
+  <%= render "homepage" %>
+<% else %>
+  <%= render "landing" %>
+<% end %>
