--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -15,7 +15,7 @@
         <i class="fa-solid fa-chart-simple"></i>
       </span>
       <%end%>
-       <%= link_to home_path do %>
+       <%= link_to root_path do %>
       <span style="font-size: 2em; color: white;">
       <i class="fa-solid fa-house"></i>
       </span>
