renering questions for avatar

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,6 +5,7 @@
     </div>
   <%end%>
   <h3>Hi, <%= current_user.avatar.name %>!</h3>
+  <%= render "/submissions/questions" %>
 </div>
 <div class="container d-flex">
   <div class="hp-bar ms-3" style="flex-grow: 7">
