--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -55,11 +55,14 @@
   border: 4px solid #EFB622;
   border-radius: 15px;
   height: 100px;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
 }
 
 .avatar-option-card {
-  height: 80px;
-  width: 80px;
+  height: 60px;
+  width: 60px;
   background-color: white;
   border-radius: 10px;
   gap: 5px;
