--- a/app/views/avatars/edit.html.erb
+++ b/app/views/avatars/edit.html.erb
@@ -15,11 +15,11 @@
       <%= cl_image_tag @user.avatar.shirt.photo.key, :class => 'avatar-shirt-op', :style => 'width: 70%;' %>
       <%= cl_image_tag @user.avatar.shoes.photo.key, :class => 'avatar-shoes-op', :style => 'width: 70%;'%>
   </div>
-<div data-controller="avatar-options"  data-avatar-options-avatar-value="<%= @user.avatar.id %>">
+<div data-controller="avatar-options"  data-avatar-options-avatar-value="<%= @user.avatar.id %>" style = "height: 126px;">
   <div class="avatar-grid">
     <% @categories.each do |category| %>
       <div data-action="click->avatar-options#select" value="<%= category %>">
-      <button data-bs-toggle="modal" data-bs-target="#category-option-<%= category%>">
+      <button data-bs-toggle="modal" data-bs-target="#category-option-<%= category%>" style="border: none;">
       <%= cl_image_tag @parts.where(category: category).first.photo.key, class: 'avatar-option-card' %></button>
       <%= render "avatars/modal", category: category %>
       </div>
