--- a/app/views/pages/_homepage.html.erb
+++ b/app/views/pages/_homepage.html.erb
@@ -6,6 +6,7 @@
   <%end%>
   <h3>Hi, <%= current_user.avatar.name %>!</h3>
 </div>
+ <%= render "/submissions/questions" %>
 <div class="container d-flex">
   <div class="hp-bar ms-3" style="flex-grow: 7">
     <% if @hp_bar_level < 40 %>
