--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -15,6 +15,14 @@
   bottom: -8%;
 }
 
+.avatar-expression {
+  width: 100%;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: -8%;
+}
+
 .avatar-shoes {
   width: 100%;
   position: absolute;
@@ -77,6 +85,14 @@
 }
 
 .avatar-hair-op {
+  width: 80%;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: -5%;
+}
+
+.avatar-expression-op {
   width: 80%;
   position: absolute;
   left: 50%;
