--- a/app/views/pages/_homepage.html.erb
+++ b/app/views/pages/_homepage.html.erb
@@ -23,10 +23,11 @@
     <p>1000</p>
   </div>
 </div>
- <%= render "/submissions/questions" %>
+<%= render "/submissions/questions" %>
 <div class="container d-flex justify-content-center mt-5">
   <div class="avatar-card">
     <%= cl_image_tag @user.avatar.skin_color.photo.key, :class => 'avatar-skin-color'%>
+    <%= image_tag "expressions/Avatar_expression_happy.png", :class => 'avatar-expression' %>
     <%= cl_image_tag @user.avatar.hair.photo.key , :class => 'avatar-hair'%>
     <%= cl_image_tag @user.avatar.pants.photo.key, :class => 'avatar-pants'%>
     <%= cl_image_tag @user.avatar.shirt.photo.key, :class => 'avatar-shirt' %>
