--- a/app/views/submissions/_questions.html.erb
+++ b/app/views/submissions/_questions.html.erb
@@ -1,11 +1,27 @@
-<% if @submission_sleep.nil? %>
+<%# Get today's date and time %>
+<% today = Date.today %>
+<% current_time = Time.now %>
+
+<%# Time for sleep prompt%>
+<% sleep_prompt_time = Time.new(today.year, today.month, today.day, 10, 0, 0) %>
+
+<%# Time for exercise prompt %>
+<% exercise_prompt_time = Time.new(today.year, today.month, today.day, 21, 0, 0) %>
+
+<%# Time for food prompt %>
+<% breakfast_prompt_time = Time.new(today.year, today.month, today.day, 11, 0, 0) %>
+<% lunch_prompt_time = Time.new(today.year, today.month, today.day, 15, 0, 0) %>
+<% dinner_prompt_time = Time.new(today.year, today.month, today.day, 20, 0, 0) %>
+
+<%# Should only show the form if its %>
+<% if @submission_sleep.nil? && (current_time >= sleep_prompt_time)%>
     <%= render "submissions/form", goal: @goal_sleep, message: "Did you sleep #{@goal_sleep.duration} hrs?" %>
-<% elsif @submission_exercise.nil? %>
+<% elsif @submission_exercise.nil? && (current_time >= exercise_prompt_time) %>
   <%= render "submissions/form", goal: @goal_exercise, message: "Did you exercise today?" %>
-<% elsif @submission_eating.length == 0 %>
+<% elsif @submission_eating.length == 0 && (current_time >= breakfast_prompt_time) %>
   <%= render "submissions/form", goal: @goal_eating, message: "Did you eat breakfast today?" %>
-<% elsif @submission_eating.length == 1 %>
+<% elsif @submission_eating.length == 1 && (current_time >= lunch_prompt_time) %>
   <%= render "submissions/form", goal: @goal_eating, message: "Did you eat lunch today?" %>
-<% elsif @submission_eating.length == 2 %>
+<% elsif @submission_eating.length == 2 &&  (current_time >= dinner_prompt_time) %>
   <%= render "submissions/form", goal: @goal_eating, message: "Did you eat dinner today?" %>
 <% end %>
