added eating goal in index

--- a/app/views/goals/_form.html.erb
+++ b/app/views/goals/_form.html.erb
@@ -30,5 +30,20 @@
   %>
   <%= f.submit 'Save' %>
 <% end %>
+<br>
+<br>
+<%= simple_form_for(@goal_eating ,html: {data:{controller: 'autosave', controller: 'slider'}}) do |f| %>
+  <%= f.label :name, 'Your eating goal:'%>
+  <%= f.input :name, as: :hidden, input_html: { value: "Food" } %>
+  <%= f.input :start_date, as: :hidden, input_html: { value: Date.today } %>
+  <p data-slider-target="food"> <%= @goal_eating.frequency / 7 %> times a day</p>
+  <%= f.input :frequency,
+  as: :range, input_html: { min: 0, max: 7, data:{action: 'change->autosave#save', action: 'change->slider#eatingupdate'}}
+  # min: 0,
+  # max: 7
+  # collection: 0..10
+  %>
+  <%= f.submit 'Save' %>
+<% end %>
 <%# <%= f.label :name, %>
 <%# <%= f.input : %>
