updated dashboard view and responsiveness to health level

--- a/app/assets/stylesheets/components/_bar.scss
+++ b/app/assets/stylesheets/components/_bar.scss
@@ -36,3 +36,14 @@
   height: 23px;
   border-radius: 15px;
 }
+
+.hp-bar-dashboard-outline {
+  height: 31px;
+  width: 68%;
+  margin-left: 18%;
+}
+
+.hp-bar-dashboard-inner {
+  height: 23px;
+  left: 35%;
+}
