--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -15,6 +15,37 @@ label {
 .submission-form {
  position: absolute;
  display: flex;
- background-color: #38C6C2;
- z-index: 9999;
+ background-color: #FDF5D0;
+ z-index: 99;
+ border-radius: 5px;
+ padding: 10px;
+ width: 250px;
+ flex-wrap: wrap;
+ justify-content: center;
+ align-items: center;
+ margin-top: 10px;
+ box-shadow: 0px 2px 8px #A6E1DA;
+  .button-yes {
+    background-color: #38C6C2;
+    border: none;
+    border-radius: 5px;
+    margin-right: 10px;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    color: white;
+  }
+
+  .button-no {
+    background-color: #38C6C2;
+    border: none;
+    border-radius: 5px;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    color: white;
+  }
 }
+
