--- a/app/views/pages/_homepage.html.erb
+++ b/app/views/pages/_homepage.html.erb
@@ -34,14 +34,14 @@
   <%# Food goals based on daily goals %>
   <div class="progress-circle-food" style="background:
     radial-gradient(closest-side, white 79%, transparent 80% 100%),conic-gradient(<% if @food_percentage_today < 40 %><%= '#FF6073'%><% elsif @food_percentage_today < 80 %><%= '#F6DE68' %><% else %><%= '#38C6C2'%><% end %> <%= @food_percentage_today%>%, <% if @food_percentage_today < 40 %><%= '#FFB5BE'%><% elsif @food_percentage_today < 80 %><%= '#FDF5D0' %><% else %><%= '#A6E1DA'%><% end %> 0);">
-    <div class="food-icon d-flex justify-content-center align-items-center" style="<% if @food_percentage_today < 40 %><%= "background-color: #DF3146;" %><% elsif @food_percentage_today< 80 %><%= "background-color: #DF3146;" %><% else %><%= "background-color: #008C9B;" %><% end %>">
+    <div class="food-icon d-flex justify-content-center align-items-center" style="<% if @food_percentage_today < 40 %><%= "background-color: #DF3146;" %><% elsif @food_percentage_today< 80 %><%= "background-color: #EFB622;" %><% else %><%= "background-color: #008C9B;" %><% end %>">
       <i class="fa-solid fa-burger" style="font-size: 2em; color: white;"></i>
     </div>
   </div>
   <%# Sleep goals based on daily goals %>
   <div class="progress-circle-sleep" style="background:
     radial-gradient(closest-side, white 79%, transparent 80% 100%),conic-gradient(<% if @sleep_percentage_today < 40 %><%= '#FF6073'%><% elsif @sleep_percentage_today < 80 %><%= '#F6DE68' %><% else %><%= '#38C6C2'%><% end %> <%= @sleep_percentage_today%>%, <% if @sleep_percentage_today < 40 %><%= '#FFB5BE'%><% elsif @sleep_percentage_today < 80 %><%= '#FDF5D0' %><% else %><%= '#A6E1DA'%><% end %> 0);">
-    <div class="sleep-icon d-flex justify-content-center align-items-center" style="<% if @sleep_percentage_today < 40 %><%= "background-color: #FF6073;" %><% elsif @sleep_percentage_today< 80 %><%= "background-color: #DF3146;" %><% else %><%= "background-color: #008C9B;" %><% end %>">
+    <div class="sleep-icon d-flex justify-content-center align-items-center" style="<% if @sleep_percentage_today < 40 %><%= "background-color: #DF3146;" %><% elsif @sleep_percentage_today< 80 %><%= "background-color: #EFB622;" %><% else %><%= "background-color: #008C9B;" %><% end %>">
       <i class="fa-solid fa-moon" style="font-size: 2em; color: white;"></i>
     </div>
   </div>
